test/spec_vectors/br/fail/module_19.wat
(module (func $unbound-nested-label (block (block (br 5)))))